# dailyops

./: .env.example  .gitignore  README.md  RESULT.md
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 20240101000100_init.sql  20240102000100_add_task_date_range.sql
apps/api/src/: auth.rs  config.rs  db.rs  main.rs  middleware.rs  models.rs  routes.rs
apps/api/src/handlers/: ai.rs  auth.rs  dashboard.rs  healthz.rs  mod.rs  notes.rs  tasks.rs
apps/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: Icons.tsx  Layout.tsx  NoteForm.tsx  ProtectedRoute.tsx  TaskForm.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: api.ts  auth.ts  mock.ts
apps/web/src/pages/: Assistant.tsx  Calendar.tsx  Dashboard.tsx  Login.tsx  NoteDetail.tsx  Notes.tsx  Settings.tsx  Signup.tsx  TaskDetail.tsx  Tasks.tsx
